integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_thaw_and_revoke_v2__revoke.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 730
expression: asset
---
{
  "interface": "V1_NFT",
  "id": "E59c8LNXhYD9Gh93UqKoQXdKD7qCUmKnzT3p3EQLYeHj",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "7bDS3d7JVYCj4FgX9pm67appQzzeP15fX5zgePDkM83V",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "EHnEc36MD4gW2VvnJZ8LCDovJFRamyWSgfAh9EckHSdP",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 1,
    "asset_hash": "E6nxh2TSFLGHZbnmMsunXJNSycJGTp1ewkLGP13CZpPs",
    "tree": "3ioUVw9VXH2pxwkfaDgeavL5ur5j3qEosAuVdqnonewD",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.05,
    "basis_points": 500,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": true,
    "delegated": true,
    "delegate": "5LgXYsnFpBC7mhS9aSbKSRc7sUmyFPun6kHazgvnuBvE",
    "ownership_model": "single",
    "owner": "4pwNE2JHNcHxp6VQqkYzaAehFi9WyQAoXpJemMpB65nR"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
